fidoconfig 0.91
--------------

----- cvs ci ------
Mon Oct 11 01:14:27 NOVST 1999
max:
* patch from Kolya Nesterov

----- cvs ci ------
Fri Oct  8 16:11:26 MET DST 1999
tobi:
* added nodelist specific keywords for the new nltools project     
  fidouserlist
  nodelist
  diffupdate
  fullupdate
  defaultzone
  nodelistformat

----- cvs ci ------
Thu Sep 30 20:20:36 NOVST 1999
max:
* fixed one more bug in string2addr() // core dumps on some msg's

----- cvs ci ------
Tue Sep 28 16:42:08 NOVST 1999
max:
* fixed bug in string2addr() // core dumps on some msg's


fidoconfig 0.9
--------------
(released on Thu Sep 23 23:05:24 CEST 1999)
	
----- cvs ci ------
Sat Sep 18 20:16:07 NOVST 1999
max: (patch from Serguei Revtov)
* fixed bug when parsing carbon areas
* added fclose after parsing config

----- cvs ci ------
Wed Sep 15 15:18:50 MET DST 1999
mtt:
* new example config

----- cvs ci ------
Wed Sep 15 15:18:50 MET DST 1999
mtt:
+ added sun makefiles
* dumpCfg puts address out now 

----- cvs ci ------
Sat Sep 11 13:00:16 NOVST 1999
max:
* added carbonReason token (patch from Serguei Revtov)
* described "-g <char>" if documentation
	
----- cvs ci ------
Fri Sep 10  11:05:00
sms:
+ added keyword sessionPwd

----- cvs ci ------
Thu Sep 02  16:25:00
Fedor:
* fixed type in fileLDescString

----- cvs ci ------
Wed Sep 01 22:06:21 CEST 1999
sms:
+ added the following keywords:

  ticOutbound
  semaDir
  badFilesDir
  areafixKillRequests
  filefixKillReports
  filefixKillRequests
  fileAreasLog
  fileNewAreasLog
  longNameList
  fileArcList
  filePassList
  fileDupeList
  msgidfile
  createDirs
  longDirNames
  splitDirs
  addDLC
  fileSingleDescLine
  fileCheckDest
  fileDescPos
  DLCDigits
  fileMaxDupeAge
  fileFileUMask
  fileDirUMask
  fileLocalPwd
  fileLDescString

----- cvs ci ------
Sun Aug 29 22:14:49 CEST 1999
sms:
+ added '#' to patmat()

----- cvs ci ------
Sat Aug 28 02:03:49 CEST 1999
Antonio:
+ added -b option for message base type.

----- cvs ci ------